--- a/Traductor/src/app/home/home.page.scss
+++ b/Traductor/src/app/home/home.page.scss
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -14,4 +14,4 @@
   
   h1 {
     text-align: center;
-  }
+  } */
