Agrego la seccion de lecciones

--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -11,8 +11,7 @@
     <!-- Traductor -->
     <section class="mt-20">
         <div class="container mx-auto p-6 bg-white rounded-lg shadow-md">
-            <ion-title class="text-2xl font-bold mb-4 ion-text-center">Traductor Bidireccional en Tiempo
-                Real</ion-title>
+            <h1 class="text-2xl font-bold mb-4 ion-text-center">Traductor Bidireccional</h1>
             <p class="ion-text-center mb-6 text-gray-600">Introduce el texto en uno de los idiomas para ver la
                 traducción
                 instantánea.</p>
@@ -45,7 +44,7 @@
         <div class="mt-20">
             <div class="ion-text-center">
                 <div>
-                    <ion-title class="text-3xl font-bold pb-2">Aprende Español con Shuar</ion-title>
+                    <h2 class="text-3xl font-bold pb-2">Aprende Español con Shuar</h2>
                     <ion-label class="text-xl font-semibold">Traducción Bidireccional</ion-label>
                 </div>
                 <p class="text-lg">
