--- a/Traductor/src/app/components/login/login.page.html
+++ b/Traductor/src/app/components/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="wrapper flex justify-center items-center w-screen h-screen">
     <div class="body flex flex-col gap-5">
-      <img class="img-login w-[150px] mx-auto" src="../../../assets/img/verificacion.png" alt="img-login">
+      <img class="img-login w-[250px] mx-auto" src="../../../assets/img/inicioSesionUsers.jpg" alt="img-login">
       <h1 class="title text-center text-2xl font-bold">Iniciar Sesión</h1>
       <div class="form-floating flex flex-col gap-2">
         <label>Cédula</label>
