--- a/Traductor/src/app/components/signup/signup.page.html
+++ b/Traductor/src/app/components/signup/signup.page.html
@@ -1,7 +1,7 @@
 <ion-content>
-  <div class="wrapper flex justify-center items-center w-screen h-screen">
+  <div class="wrapper flex justify-center items-center">
     <div class="body flex flex-col gap-5 w-[80%]">
-      <img class="img-login w-[150px] mx-auto" src="../../../assets/img/verificacion.png" alt="img-login">
+      <img class="img-login w-[250px] mx-auto" src="../../../assets/img/inicioSesionUsers.jpg" alt="img-login">
       <h1 class="title text-center text-2xl font-bold">Registrate</h1>
       <form class="flex flex-col gap-3">
         <div class="form-floating flex flex-col gap-2">
