--- a/Traductor/src/app/admin/navbar/navbar.page.html
+++ b/Traductor/src/app/admin/navbar/navbar.page.html
@@ -1,18 +1,22 @@
 <ion-menu side="end" contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Dashboard</ion-title>
+      <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-list>
-      <ion-item routerLink="/admin" routerDirection="root">
+      <ion-item routerLink="/dashboard" routerDirection="root">
         <ion-icon name="home-outline" slot="start"></ion-icon>
         <ion-label>Dashboard</ion-label>
       </ion-item>
-      <ion-item routerLink="/admin/users" routerDirection="root">
+      <ion-item routerLink="/admin/user/lista" routerDirection="root">
         <ion-icon name="people-outline" slot="start"></ion-icon>
-        <ion-label>Usuarios</ion-label>
+        <ion-label>Gestión de Usuarios</ion-label>
+      </ion-item>
+      <ion-item routerLink="/admins" routerDirection="root">
+        <ion-icon name="people-outline" slot="start"></ion-icon>
+        <ion-label>Gestión de Administradores</ion-label>
       </ion-item>
       <ion-item routerLink="/configuraciones" routerDirection="root">
         <ion-icon name="settings-outline" slot="start"></ion-icon>
@@ -21,6 +25,10 @@
       <ion-item routerLink="/acerca" routerDirection="root">
         <ion-icon name="information-circle-outline" slot="start"></ion-icon>
         <ion-label>Acerca de</ion-label>
+      </ion-item>
+      <ion-item routerLink="/home" routerDirection="root">
+        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+        <ion-label>Salir</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
