--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <figure class="mt-10 ion-text-center">
-                <ion-img class="w-32 mx-auto" src="assets/icon/favicon.png" alt="Imagen del traductor"></ion-img>
+                <ion-img class="w-50 mx-auto" src="assets/img/Shuar rostro_1.jpg" alt="Imagen del traductor"></ion-img>
             </figure>
         </div>
     </section>
@@ -100,8 +100,7 @@
                 </ion-col>
                 <ion-col size="12" size-md="4">
                     <figure>
-                        <ion-img class="w-32 mx-auto" src="assets/icon/favicon.png"
-                            alt="Imagen de traducción"></ion-img>
+                        <ion-img class="w-50 mx-auto" src="assets/img/SHUAR1.jpg" alt="Imagen de traducción"></ion-img>
                     </figure>
                 </ion-col>
             </ion-row>
