--- a/Traductor/src/app/admin/navbar/navbar.page.html
+++ b/Traductor/src/app/admin/navbar/navbar.page.html
@@ -11,12 +11,17 @@
         <ion-label>Dashboard</ion-label>
       </ion-item>
       <ion-item routerLink="/admin/user/lista" routerDirection="root">
-        <ion-icon name="people-outline" slot="start"></ion-icon>
+        <ion-icon name="person-add-outline" slot="start"></ion-icon>
         <ion-label>Gestión de Usuarios</ion-label>
       </ion-item>
       <ion-item routerLink="/admins" routerDirection="root">
         <ion-icon name="people-outline" slot="start"></ion-icon>
         <ion-label>Gestión de Administradores</ion-label>
+      </ion-item>
+      <!-- Perfil -->
+      <ion-item routerLink="/admin/user/profile" routerDirection="root">
+        <ion-icon name="person-outline" slot="start"></ion-icon>
+        <ion-label>Perfil</ion-label>
       </ion-item>
       <ion-item routerLink="/configuraciones" routerDirection="root">
         <ion-icon name="settings-outline" slot="start"></ion-icon>
