--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -16,25 +16,26 @@
                 traducción
                 instantánea.</p>
 
-            <ion-item class="mb-6">
+            <!-- <ion-item class="mb-6">
                 <ion-label position="floating">Idioma de origen:</ion-label>
                 <ion-select id="fromLanguage" [(ngModel)]="fromLanguage" (change)="toggleLanguage()">
                     <ion-select-option value="shuar">Shuar</ion-select-option>
                     <ion-select-option value="espanol">Español</ion-select-option>
                 </ion-select>
-            </ion-item>
+            </ion-item> -->
 
             <div class="form-group mb-6">
                 <label for="textToTranslate" class="block text-sm font-medium text-gray-700">Texto a traducir:</label>
-                <textarea id="textToTranslate" [formControl]="textControl"
-                    class="form-control mt-1 block w-full p-3 border rounded-lg shadow-sm"
-                    placeholder="Escribe aquí..."></textarea>
+                <textarea id="textToTranslate" [formControl]="textControl" [(ngModel)]="txt_texto"
+                    class="form-control mt-1 block w-full p-3 border rounded-lg shadow-sm" placeholder="Escribe aquí..."
+                    (focusout)="traducir()"></textarea>
             </div>
+            <!-- Agegar boton de traduccion -->
 
             @if (translation) {
             <div class="mt-6 p-4 border border-gray-200 rounded-lg bg-gray-50">
                 <h2 class="text-lg font-semibold mb-2">Traducción:</h2>
-                <p>{{ translation }}</p>
+                <p><b>{{ translation }}</b> - {{ tr }}</p>
             </div>
             }
         </div>
