--- a/Traductor/src/app/home/home.page.html
+++ b/Traductor/src/app/home/home.page.html
@@ -12,9 +12,7 @@
     <section class="mt-20">
         <div class="container mx-auto p-6 bg-white rounded-lg shadow-md">
             <h1 class="text-2xl font-bold mb-4 ion-text-center">Traductor Bidireccional</h1>
-            <p class="ion-text-center mb-6 text-gray-600">Introduce el texto en uno de los idiomas para ver la
-                traducción
-                instantánea.</p>
+            <p class="ion-text-center mb-6 text-gray-600">Shuar - Español</p>
 
             <!-- <ion-item class="mb-6">
                 <ion-label position="floating">Idioma de origen:</ion-label>
@@ -27,10 +25,10 @@
             <div class="form-group mb-6">
                 <label for="textToTranslate" class="block text-sm font-medium text-gray-700">Texto a traducir:</label>
                 <textarea id="textToTranslate" [formControl]="textControl" [(ngModel)]="txt_texto"
-                    class="form-control mt-1 block w-full p-3 border rounded-lg shadow-sm" placeholder="Escribe aquí..."
-                    (focusout)="traducir()"></textarea>
+                    class="form-control mt-1 block w-full p-3 border rounded-lg shadow-sm"
+                    placeholder="Ingresa aquí el texto..." (focusout)="traducir()"></textarea>
             </div>
-            <!-- Agegar boton de traduccion -->
+            <ion-button expand="block" color="primary" (click)="traducir()">Traducir</ion-button>
 
             @if (translation) {
             <div class="mt-6 p-4 border border-gray-200 rounded-lg bg-gray-50">
